RESOLVED FIXED307895
IndexedDB: Fix typo in debug #ifdef
https://bugs.webkit.org/show_bug.cgi?id=307895
Summary IndexedDB: Fix typo in debug #ifdef
Claudio Saavedra
Reported 2026-02-13 23:37:38 PST
.
Attachments
Claudio Saavedra
Comment 1 2026-02-13 23:38:13 PST
EWS
Comment 2 2026-02-14 05:04:50 PST
Committed 307571@main (6aedd2e564c5): <https://commits.webkit.org/307571@main> Reviewed commits have been landed. Closing PR #58712 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-02-14 05:05:12 PST
Note You need to log in before you can comment on or make changes to this bug.