IndexedDB: Fix typo in debug #ifdef https://bugs.webkit.org/show_bug.cgi?id=307895

Reviewed by Anne van Kesteren.

Somehow this went unnoticed for +10 years. Incidentally
move this and other uses of NDEBUG to ASSERT_ENABLED since
these are all assertion checks.

* Source/WebCore/Modules/indexeddb/IDBDatabase.cpp:
(WebCore::IDBDatabase::didCommitOrAbortTransaction):
* Source/WebCore/Modules/indexeddb/server/MemoryIDBBackingStore.cpp:
(WebCore::IDBServer::MemoryIDBBackingStore::clearObjectStore):
* Source/WebCore/Modules/indexeddb/server/MemoryIndexCursor.cpp:
(WebCore::IDBServer::MemoryIndexCursor::iterate):

Canonical link: https://commits.webkit.org/307571@main